--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,19 @@ dependencies:
   bloc: ^8.1.1
   flutter_bloc: ^8.1.1
   go_router: ^7.0.0
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.0
+  firebase_core: ^2.11.0
+  firebase_auth: ^4.5.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  json_serializable: ^6.6.1
+  build_runner: ^2.3.3
+  freezed: ^2.3.3
 
 flutter:
 
