--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   json_annotation: ^4.8.0
   firebase_core: ^2.11.0
   firebase_auth: ^4.5.0
+  # firebase_messaging: ^14.6.0
+  # flutter_local_notifications: ^14.0.0+2
 
 dev_dependencies:
   flutter_test:
@@ -33,3 +35,5 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+  # assets:
+  #   -assets/notification_icon.png
