--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   json_annotation: ^4.8.0
   firebase_core: ^2.11.0
   firebase_auth: ^4.5.0
+  intro_slider: ^4.2.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  google_fonts: ^4.0.4
   # firebase_messaging: ^14.6.0
   # flutter_local_notifications: ^14.0.0+2
 
@@ -31,6 +35,7 @@ dev_dependencies:
   json_serializable: ^6.6.1
   build_runner: ^2.3.3
   freezed: ^2.3.3
+  hive_generator: ^2.0.0
 
 flutter:
 
