--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   google_fonts: ^4.0.4
+  flutter_svg: ^2.0.5
   # firebase_messaging: ^14.6.0
   # flutter_local_notifications: ^14.0.0+2
 
@@ -40,5 +41,9 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  assets:
+    - assets/icons/
+    - assets/backgrounds/
   # assets:
   #   -assets/notification_icon.png
