Category items screen template created added some navigation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,5 +45,6 @@ flutter:
   assets:
     - assets/icons/
     - assets/backgrounds/
+    - assets/images/
   # assets:
   #   -assets/notification_icon.png
