--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,5 +46,6 @@ flutter:
     - assets/icons/
     - assets/backgrounds/
     - assets/images/
+    - assets/breathing_images/
   # assets:
   #   -assets/notification_icon.png
