--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   hive_flutter: ^1.1.0
   google_fonts: ^4.0.4
   flutter_svg: ^2.0.5
+  table_calendar: ^3.0.9
 
   # firebase_messaging: ^14.6.0
   # flutter_local_notifications: ^14.0.0+2
