Refactored onbording and auth screens implemented new images

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ flutter:
     - assets/images/
     - assets/breathing_images/
     - assets/emotions/
+    - assets/intro/
+
 
   # assets:
   #   -assets/notification_icon.png
