--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   bottom_sheet: ^4.0.0
   fl_chart: ^0.63.0
   carousel_slider: ^4.2.1
+  flutter_launcher_icons: ^0.13.1
 
   # firebase_messaging: ^14.6.0
   # flutter_local_notifications: ^14.0.0+2
