--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   fl_chart: ^0.63.0
   carousel_slider: ^4.2.1
   flutter_launcher_icons: ^0.13.1
+  app_utils: ^0.0.6
 
   # firebase_messaging: ^14.6.0
   # flutter_local_notifications: ^14.0.0+2
