--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_launcher_icons: ^0.13.1
   app_utils: ^0.0.6
+  intl: ^0.18.1
+  http: ^1.1.0
 
   # firebase_messaging: ^14.6.0
   # flutter_local_notifications: ^14.0.0+2
