--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,18 @@ dependencies:
   # firebase_messaging: ^14.6.0
   # flutter_local_notifications: ^14.0.0+2
 
+flutter_launcher_icons:
+  image_path: "assets/app_icon/LifeSync-01.png"
+  # image_path_android: "assets/images/icon-710x599-android.png"
+  # image_path_ios: "assets/images/icon-1024x1024.png"
+  android: true # can specify file name here e.g. "ic_launcher"
+  ios: true # can specify file name here e.g. "My-Launcher-Icon"
+  # adaptive_icon_background: "assets/images/christmas-background.png" # only available for Android 8.0 devices and above
+  # adaptive_icon_foreground: "assets/images/icon-foreground-432x432.png" # only available for Android 8.0 devices and above
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  remove_alpha_ios: true
+  background_color_ios: "#ffffff"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
