--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.pet_project">
+    package="com.example.life_sync">
    <application
-        android:label="pet_project"
+        android:label="life_sync"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
