--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:  
+    sdk: flutter
   cupertino_icons: ^1.0.2
   bloc: ^8.1.1
   flutter_bloc: ^8.1.1
@@ -23,7 +25,7 @@ dependencies:
   intro_slider: ^4.2.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  google_fonts: ^6.1.0
+  # google_fonts: ^6.1.0
   flutter_svg: ^2.0.5
   table_calendar: ^3.0.9
   bottom_sheet: ^4.0.0
@@ -34,7 +36,7 @@ dependencies:
   intl: ^0.18.1
   http: ^1.2.0
   cloud_firestore: ^4.14.0
-  welltested: ^0.0.1
+  # welltested: ^0.0.1
 
   # firebase_messaging: ^14.6.0
   # flutter_local_notifications: ^14.0.0+2
@@ -62,8 +64,10 @@ dev_dependencies:
   hive_generator: ^2.0.0
 
 flutter:
-
   uses-material-design: true
+
+  # Enables generation from arb files
+  generate: true
 
   assets:
     - assets/icons/
