--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,16 @@
 name: life_sync
 description: A new Flutter project.
-publish_to: 'none'
-
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
-
+  sdk: ">=2.18.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:  
+  flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.2
   bloc: ^8.1.1
@@ -41,6 +39,7 @@ dependencies:
   # firebase_messaging: ^14.6.0
   # flutter_local_notifications: ^14.0.0+2
 
+# to run this use flutter pub run flutter_launcher_icons
 flutter_launcher_icons:
   image_path: "assets/app_icon/life_sync-01.png"
   # image_path_android: "assets/images/icon-710x599-android.png"
@@ -85,7 +84,6 @@ flutter:
     - assets/fonts/Signika/static/Signika-Regular.ttf
     - assets/fonts/Signika/static/Signika-Medium.ttf
     - assets/fonts/MedievalSharp/MedievalSharp-Regular.ttf
-
 
   # assets:
   #   -assets/notification_icon.png
