--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,6 @@ dependencies:
   bottom_sheet: ^4.0.0
   fl_chart: ^0.66.2
   carousel_slider: ^4.2.1
-  flutter_launcher_icons: ^0.13.1
   app_utils: ^0.0.6
   intl: ^0.18.1
   http: ^1.2.0
@@ -39,6 +38,18 @@ dependencies:
 
   # firebase_messaging: ^14.6.0
   # flutter_local_notifications: ^14.0.0+2
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+
+  flutter_lints: ^3.0.1
+  json_serializable: ^6.6.1
+  flutter_launcher_icons: ^0.13.1
+  # flutter_native_splash: ^2.4.0
+  build_runner: ^2.3.3
+  freezed: ^2.3.3
+  hive_generator: ^2.0.0
 
 # to run this use flutter pub run flutter_launcher_icons
 flutter_launcher_icons:
@@ -53,17 +64,10 @@ flutter_launcher_icons:
   remove_alpha_ios: true
   # background_color_ios: "#9BCD8F"
 
-
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
-  flutter_lints: ^3.0.1
-  json_serializable: ^6.6.1
-  build_runner: ^2.3.3
-  freezed: ^2.3.3
-  hive_generator: ^2.0.0
+# # to run this use dart run flutter_native_splash:create
+# flutter_native_splash:
+#   image: assets/splash/splash500.png
+#   color: "#FFFFFF"
 
 flutter:
   uses-material-design: true
