--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,14 +5,14 @@ publish_to: "none"
 version: 1.0.1+2
 
 environment:
-  sdk: ">=2.18.2 <3.0.0"
+  sdk: '>=3.3.1 <4.0.0'
+
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  cupertino_icons: ^1.0.2
   bloc: ^8.1.1
   flutter_bloc: ^8.1.1
   go_router: ^13.0.1
@@ -29,7 +29,6 @@ dependencies:
   bottom_sheet: ^4.0.0
   fl_chart: ^0.66.2
   carousel_slider: ^4.2.1
-  app_utils: ^0.0.6
   intl: ^0.18.1
   http: ^1.2.0
   cloud_firestore: ^4.14.0
@@ -46,7 +45,7 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   json_serializable: ^6.6.1
   flutter_launcher_icons: ^0.13.1
-  # flutter_native_splash: ^2.4.0
+  flutter_native_splash: ^2.4.0
   build_runner: ^2.3.3
   freezed: ^2.3.3
   hive_generator: ^2.0.0
@@ -65,9 +64,9 @@ flutter_launcher_icons:
   # background_color_ios: "#9BCD8F"
 
 # # to run this use dart run flutter_native_splash:create
-# flutter_native_splash:
-#   image: assets/splash/splash500.png
-#   color: "#FFFFFF"
+flutter_native_splash:
+  image: assets/splash/LifeSync.png
+  color: "#FFFFFF"
 
 flutter:
   uses-material-design: true
