--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,5 @@
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-Xmx6g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.caching=true
 android.useAndroidX=true
 android.enableJetifier=true
