--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: life_sync
 description: A new Flutter project.
 publish_to: "none"
 
-version: 1.1.1+4
+version: 1.1.2+5
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
@@ -13,13 +13,13 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  bloc: ^8.1.1
-  flutter_bloc: ^8.1.1
-  go_router: ^13.0.1
+  bloc: ^9.1.0
+  flutter_bloc: ^9.1.1
+  go_router: ^17.0.1
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.5.0
+  firebase_core: ^4.3.0
+  firebase_auth: ^6.1.3
   intro_slider: ^4.2.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
@@ -27,13 +27,14 @@ dependencies:
   flutter_svg: ^2.0.5
   table_calendar: ^3.0.9
   bottom_sheet: ^4.0.0
-  fl_chart: ^0.66.2
-  carousel_slider: ^4.2.1
-  intl: ^0.19.0
+  fl_chart: ^1.1.1
+  carousel_slider: ^5.1.1
+  intl: ^0.20.2
   http: ^1.2.0
-  cloud_firestore: ^4.14.0
+  cloud_firestore: ^6.1.1
   url_launcher: ^6.2.5
-  google_sign_in: ^6.2.1
+  google_sign_in: ^7.2.0
+  path_provider: ^2.1.5
   # welltested: ^0.0.1
 
   # firebase_messaging: ^14.6.0
@@ -43,9 +44,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.1
+  flutter_lints: ^6.0.0
   json_serializable: ^6.6.1
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.4
   flutter_native_splash: ^2.4.0
   build_runner: ^2.3.3
   freezed: ^2.3.3
